--- a/Osiris.csproj
+++ b/Osiris.csproj
@@ -6,15 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Shared\NewFolder\**" />
+    <Content Remove="Shared\NewFolder\**" />
+    <EmbeddedResource Remove="Shared\NewFolder\**" />
+    <None Remove="Shared\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Shared\NewFolder\" />
   </ItemGroup>
 
 </Project>
